# ChangeLog for sci-biology/inGAP-bin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*inGAP-bin-3.0.1 (23 Mar 2014)

  23 Mar 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +inGAP-bin-3.0.1.ebuild, +metadata.xml:
  sci-biology/inGAP-bin: new package; needs java team help