@@ -1,14 +1,17 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=3
+EAPI=5
 
 MY_PV="3_0_1"
 S="${WORKDIR}"/inGAP_"${MY_PV}"
 
+inherit java-utils-2
+
 DESCRIPTION="Detect SNPs and indels from Next-gen sequences using a Bayesian algorithm"
-HOMEPAGE="http://sites.google.com/site/nextgengenomics/ingap
+HOMEPAGE="
+	http://sites.google.com/site/nextgengenomics/ingap
 	http://sourceforge.net/projects/ingap/"
 SRC_URI="http://sourceforge.net/projects/ingap/files/ingap/v"${PV}"/inGAP_"${MY_PV}".tgz"
 
@@ -17,23 +20,22 @@ SLOT="0"
 KEYWORDS="~amd64"
 IUSE=""
 
-DEPEND=""
+DEPEND=">=virtual/jre-1.7"
 RDEPEND="${DEPEND}
 	dev-java/jfreechart
 	dev-java/swing-layout
 	dev-java/jcommon
 	dev-java/itext
 	dev-java/bytecode
-	dev-java/biojava
+	sci-biology/biojava
 	dev-java/absolutelayout" # gnujaxp ?
 
 src_install(){
-	dobin inGAP.jar || die
+	java-pkg_dojar inGAP.jar
+	java-pkg_dolauncher inGAP --jar inGAP.jar
 	# dobin external/bin/{primer3_core, run_cpp, trf}
-	mv manual.pdf inGAP_Manual.pdf || die
-	dodoc inGAP_Manual.pdf || die
-	insinto /usr/share/inGAP
-	doins doc/manual.htm
+	newdoc manual.pdf inGAP_Manual.pdf
+	dodoc doc/manual.htm
 	insinto /usr/share/inGAP/manual_files
 	doins doc/manual_files/*.png
 }
